--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -3768,6 +3768,7 @@
 
             @include media-breakpoint-down(sm) {
                 margin: 0;
+                width: 320px;
             }
 
             &:last-child {
@@ -7132,6 +7133,15 @@
 
         }
     }
+}
+
+.footer_post_image{
+    img{
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+        }
+    }
+    
 }
 
 
