--- a/wp-content/themes/anomeo/assets/scss/_information.scss
+++ b/wp-content/themes/anomeo/assets/scss/_information.scss
@@ -4,7 +4,7 @@
     width: 60%;
 
     @include media-breakpoint-down(sm) {
-        padding: 21px 37px;
+        padding: 25px 37px;
     }
 
     &.cookies{
@@ -18,6 +18,7 @@
         color:#15818b;
         margin-bottom: 32px;
         font-size: 36px;
+        font-family: 'Din Pro Light';
         @include media-breakpoint-down(sm) {
             font-size: 28px;
         }
