mobile cart, checkout wip, home

--- a/wp-content/themes/anomeo/assets/scss/_base.scss
+++ b/wp-content/themes/anomeo/assets/scss/_base.scss
@@ -137,9 +137,9 @@ input{
 }
 
 .select2 {
-    &-search--dropdown {
-        padding: 4px var(--ak-main-spacing);
-    }
+    // &-search--dropdown {
+    //     padding: 4px var(--ak-main-spacing);
+    // }
 
     &-results__option {
         padding: 10px var(--ak-main-spacing);
