--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -5853,9 +5853,18 @@
 
 
 .color_bg {
-    padding: 10px 10px 4px;
+    // padding: 10px 10px 4px;
     border-radius: 25px;
     color: #138997;
+
+    height: 46px;
+
+    &:before {
+        content: "";
+        display: inline-block;
+        vertical-align: middle;
+        height: 100%;
+    }
 
     @include media-breakpoint-down(sm) {
         padding: 2px 10px 0px;
